Revert "Fix masthead overlap spacing"
This reverts commit a2c9135b635bdb1b42be971c712c16e8ec9745f2.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,16 +7,9 @@ html {
   min-height: 100%;
 }
 
-:root {
-  --masthead-offset: #{$masthead-height};
-  scroll-padding-top: $masthead-height;
-  scroll-padding-top: var(--masthead-offset, #{$masthead-height});
-}
-
 body {
   margin: 0;
   padding: $masthead-height 0 0;
-  padding: var(--masthead-offset, #{$masthead-height}) 0 0;
   padding-bottom: 9em;
   color: $text-color;
   font-family: $global-font-family;
