--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -6,17 +6,15 @@
   position: fixed;
   background: var(--background-color);
   border-bottom: 1px solid var(--border-color);
-  min-height: $masthead-height;
-  min-height: var(--masthead-offset, #{$masthead-height});
+  height: $masthead-height;
   top: 0;
   width: 100%;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
 
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
-  z-index: 999;
+  z-index: 20;
 
   &__inner-wrap {
     @include container;
