--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -18,7 +18,6 @@
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
     padding-top: $masthead-height;
-    padding-top: var(--masthead-offset, #{$masthead-height});
   }
 
   @include breakpoint($large) {
